responsive fix, white space fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,10 @@
 @import url('./styles/Footer.scss');
 @import url('./styles/InfoSection.scss');
 @import url('./styles/Faq.scss');
-
+html {
+    margin: 0;
+    padding: 0;
+}
 body {
     font-family: 'Baloo 2', cursive;
     margin: 0;
