--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -7,7 +7,7 @@ footer {
   justify-content: center;
   color: white;
   padding-bottom: 100px;
-  width: 100%;
+  max-width: 100vw;
 
   .container {
     width: 1300px;
@@ -93,7 +93,6 @@ footer {
 @media only screen and (max-width: 480px) {
   footer {
     padding-bottom: 0;
-    max-width: 480px;
     .container {
       flex-direction: column-reverse;
       gap: 40px;
