--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -90,6 +90,10 @@
     .menu-btn {
         display: none;
     }
+
+    .menu {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 480px) {
@@ -118,6 +122,7 @@
         }
         
         .menu {
+            display: none;
             opacity: 0;
             font-size: 20px;
             font-weight: 600;
@@ -146,6 +151,7 @@
         }
 
         .menu.open {
+            display: block;
             opacity: 1;
             transform: translateX(215px);
         }
